--- a/todo.org
+++ b/todo.org
@@ -30,9 +30,9 @@ Elaguer ?? Cest un peu long
 **** TODO 2. Applicatioxn to extremes of the drag
 ***** NEXT Fixer Y label figure AMS_drag_resampling (figure 16)
 ***** TODO Fixer couleurs figure AMS_drag_resampling (figure 16)
-*** TODO B. Extreme time-avg forces with GKTL
+*** RELIRE B. Extreme time-avg forces with GKTL
 **** RELIRE 1. The GKTL algorithm
-**** TODO 2. Application to extremes of the time-avg drag
+**** RELIRE 2. Application to extremes of the time-avg drag
 ***** DONE Enlever les references au run de controle.
 Lefficacite de GKTL est evalue par rapport a lestimation de la PDF de la trainee
 integree.
@@ -47,8 +47,9 @@ log(PDF) = ax2+bx+c
       utiliser le fit moindres carres de la PDF en lieu et place de 
       l'approx gaussiene.
 - [ ] Comprendre la difference avec =compute_efficiency_normalized.m=
-***** NEXT Mettre ajour le texte
+***** DONE Mettre ajour le texte
 ***** DONE Localiser les donnees des runs GKTL pour la courbe IS_GKTL
 ***** DONE Recuperer le script matlab de la courbe IS_GKTL
 ***** DONE Transcrire le script en python
+***** DONE Conclusion
 ** TODO V. Conclusion 
