Fix sentence about AMS

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -529,8 +529,7 @@ In other words, generated trajectories are given a statistical weight, which kno
 
 % Introduction to AMS
 The \acl{ams}~\cite{amspaper} inherits from the basic ideas of \textit{splitting} algorithms~\cite{kahnharris}: the sampling of a rare event is made easier by splitting the corresponding dynamical path into a sequence of events that can be sampled with a higher probability~\cite{glasserman,rolland_simonnet}.
-Even though a large body of variants have been proposed since the early 50s, the \ac{ams} appears as the most advanced formulation of multilevel splitting to date (\textbf{Sans doute un peu <<too-much>>. Avec cette phrase je voudrais justifier que l'on s'intéresse à l'AMS et pas à un autre algo.}).
-In recent years, it was applied to several problems, for instance the computation of the dissociation time of biomolecules~\cite{teo2016} or the simulation of rare relaminarizations in a stochastic model of wall turbulence~\cite{rolland2017}.
+Over the past ten years the \ac{AMS} has been successfully applied to a large body of problems, including the computation of the dissociation time of biomolecules~\cite{teo2016} or the simulation of rare relaminarizations in a stochastic model of wall turbulence~\cite{rolland2017}.
 
 % Quick description of TAMS
 In the present paper we use a variant of the \ac{ams} algorithm called the \ac{tams}.
