Change \overline to \langle \rangle in caption for autocorr_drag

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -275,7 +275,7 @@ In that case, the \ac{pdf} is quasi-symmetric and does not display exponential t
     {\label{fig:pdf_drag_b}
     	\includegraphics[width=.45\linewidth]{./autocorr_drag/autocorr_drag.png}}  
       \caption{\textbf{(a)} Estimate of the zero-mean \ac{pdf} for drag fluctuations $f'_d = (f_d - \bar{f_d})$ where $\bar{f_d}$ denotes the averaged value. The drag is evaluated both in the presence and absence of the obstacle. Note that both \acsp{pdf} have different variance, and are here not normalized.
-  \textbf{(b)} Autocorrelation function of the drag defined as $\left( \overline{f_d(t+\tau)f_d(t)}-\overline{f_d}^2 \right) /\sigma^2$. The lag $\tau$ is normalized by the turnover-time~\eqref{eq:turnover_time}.}
+  \textbf{(b)} Autocorrelation function of the drag defined as $\left( \langle f_d(t+\tau)f_d(t) \rangle-\langle f_d \rangle ^2 \right) /\sigma^2$. The lag $\tau$ is normalized by the turnover-time~\eqref{eq:turnover_time}.}
   \label{fig:pdf_drag}
 \end{figure}
 %
